--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>MsIwaleilani's NFT Shop</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,21 +39,21 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.gg/rYJ2Prazrm"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
-            href="https://twitter.com/codeSTACKr"
+            href="https://twitter.com/itzm3ggs_"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/musuWAHINE"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -69,9 +69,9 @@
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
+        <h1 id="welcomeH1">Welcome to the musuWAHINE project!</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          The musuWAHINE NFT Project is a decentralized, Hawaiian operated project that aims to demonstrate how to develope and launch your own NFT Collection while spreading the aloha spirit.
         </p>
       </div>
     </section>
@@ -104,15 +104,15 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+          A new batch of yummy musubis will be available very soon!
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/A9CnsVzzkZ"
+          href="https://discord.gg/rYJ2Prazrm"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+          ><span>Join the Ohana</span>
         </a>
         <div id="mintContainer" class="mint-container hidden">
           <div class="info-container">
@@ -122,11 +122,11 @@
             </div>
             <div>
               <h3>Price Per Mint</h3>
-              <p id="pricePerMint">1 ETH</p>
+              <p id="pricePerMint">.01 ETH</p>
             </div>
             <div>
               <h3>Max</h3>
-              <p id="maxPerMint">5 per wallet</p>
+              <p id="maxPerMint">10 per wallet</p>
             </div>
           </div>
           <div class="mint-qty">
@@ -161,7 +161,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/teststackr-collection"
+          href="https://testnets.opensea.io/collection/musuwahine"
           target="_blank"
           rel="noopener noreferrer"
         >
@@ -176,31 +176,31 @@
       <div class="splide__track">
         <ul class="splide__list">
           <li class="splide__slide">
-            <img src="images/slider/0.png" />
+            <img src="" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/1.png" />
+            <img src="REVEAL 2.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/2.png" />
+            <img src="REVEAL 3.png " />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/3.png" />
+            <img src="REVEAL 4.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/4.png" />
+            <img src="REVEAL 5.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/5.png" />
+            <img src="REVEAL 6.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/6.png" />
+            <img src="REVEAL 7.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/7.png" />
+            <img src="REVEAL 8.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/8.png" />
+            <img src="REVEAL 9.png" />
           </li>
         </ul>
       </div>
